# animaworks

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_ja.md  docker-compose.yml  main.py  pyproject.toml
LICENSES/: AGPL-3.0.txt  MIT.txt
cli/: __main__.py  _gateway.py  parser.py
core/: __init__.py  _agent_cycle.py  _agent_priming.py  _agent_prompt_log.py  _anima_heartbeat.py  _anima_inbox.py  _anima_lifecycle.py  _anima_messaging.py  agent.py  anima.py  anima_factory.py  asset_reconciler.py  audit.py  background.py  cascade_limiter.py  config.py  config_cli.py  config_migrate.py  context_tracker.py  conversation_memory.py  external_tools.py  fd_limits.py  i18n.py  image_artifacts.py  init.py  lifecycle.py  logging_config.py  memory.py  messenger.py  org_sync.py  outbound.py  paths.py  person.py  person_factory.py  prompt_builder.py  schedule_parser.py  schemas.py  session_compactor.py  tool_handler.py
demo/: entrypoint.sh
docs/: brain-mapping.ja.md  brain-mapping.md  features.ja.md  features.md  memory.ja.md  memory.md  security.ja.md  security.md  slack-socket-mode-setup.ja.md  slack-socket-mode-setup.md  spec.md  vision.ja.md  vision.md
scripts/: analyze_heartbeat_activity.py  analyze_heartbeat_output.py  build_docs.py  check_chat_input_ui.py  check_workspace_conv_ui.py  compare_prompt_db.py  debug_system_prompt.py  demo_consolidation.py  demo_priming.py  demo_rag.py  demo_spreading_activation.py  demo_weekly_integration.py  doc_freshness.py  generate_changelog.py  generate_reference.py  generate_release_notes.py  (+1 more)
(+853 files in other folders)
